--- a/templates/predict.html
+++ b/templates/predict.html
@@ -94,7 +94,7 @@
     // Load the Google Maps API script
     function loadMapScript() {
       const script = document.createElement("script");
-      script.src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyApb69fNQll1kFrfUP-xTIrrOC6xz2MDxA&callback=initMap";
+      script.src = "API_KEY";
       script.defer = true;
       document.head.appendChild(script);
     }
